--- a/025.Image Gallery 2.5D/style.css
+++ b/025.Image Gallery 2.5D/style.css
@@ -1,69 +1,62 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  height: 100vh;
-  background: black;
-  overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+
+	background: #192627;
+	overflow: hidden;
 }
 
-.image-container {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  transform-style: preserve-3d;
-  transform: perspective(1000px) rotateY(0deg);
-  transition: transform 0.7s;
+.img__container {
+	position: relative;
+	width: 200px;
+	height: 200px;
+	transform-style: preserve-3d;
+	transform: perspective(1000px) rotateY(0deg);
+	transition: transform 0.85s;
 }
 
-.image-container span {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transform: rotateY(calc(var(--i) * 45deg)) translateZ(400px);
+.img__container .image {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	width: 250px;
+	height: 150px;
+	object-fit: cover;
+	transform: rotateY(calc(var(--i) * 45deg)) translateZ(600px);
 }
 
-.image-container span img {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-}
+.btn__container {
+	position: relative;
+	width: 80%;
+	.btn {
+		position: absolute;
+		bottom: -80px;
+		background: #171618;
+		color: #fff;
+		border: none;
+		padding: 10px 20px;
+		border-radius: 5px;
+		cursor: pointer;
+		&:hover {
+			filter: brightness(1.5);
+		}
 
-.btn-container {
-  position: relative;
-  width: 80%;
-}
+		&#btn__prev {
+			left: 20%;
+		}
 
-.btn {
-  position: absolute;
-  bottom: -80px;
-  background: crimson;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-#prev {
-  left: 20%;
-}
-
-#next {
-  right: 20%;
-}
-
-.btn:hover {
-  filter: brightness(1.5);
+		&#btn__next {
+			right: 20%;
+		}
+	}
 }
