--- a/026.Simple Tab/style.css
+++ b/026.Simple Tab/style.css
@@ -36,7 +36,7 @@ body {
 .tabs {
 	display: flex;
 	justify-content: center;
-	align-items: center;
+
 	width: 100%;
 	height: 100%;
 
@@ -48,11 +48,10 @@ body {
 		cursor: pointer;
 		display: inline-block;
 		padding: 0.5rem 1rem;
+
+	border-radius:  8px 8px 0 0;
 	}
 
-  ul li {
-    display: inline;
-  }
 }
 
 .tab {
@@ -67,17 +66,20 @@ body {
   display: none;
   padding: 20px;
   left: 0;
+  height: fit-content;
+
   transform: translateX(-0%);
   position: absolute;
   width: 100%;
   border: 1px solid #fafafa;
   background-color: #fafafa;
-  border-radius: 8px;
+  border-radius: 0px 0px 8px 8px;
 }
 
 .tab input[type="radio"]:checked+label {
   color: #333;
   background-color: #fafafa;
+	font-weight: bold;
 }
 
 .tab input[type="radio"]:checked+label+.tab__content {
