--- a/027.Simple Pagination/style.css
+++ b/027.Simple Pagination/style.css
@@ -1,62 +1,41 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
+	height: 100vh;
+	width: 100vw;
+	background-color: #fafafa;
 }
 
 section {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
-button {
-  width: 50px;
-  height: 50px;
-
-  border-radius: 50px;
-  border: 2px solid #4a5b23;
-  background-color: #4a5b23;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  color: #fff;
-  text-align: center;
-  transition: width 0.5s ease-out;
-
-  &:hover {
-    width: 180px;
-  }
-}
-
 .pagination {
-  display: flex;
-  list-style: none;
-  gap: 4px;
-  padding: 0;
-}
+	display: flex;
+	list-style: none;
+	gap: 4px;
+	padding: 0;
+	a {
+		padding: 8px 12px;
+		border: 1px solid #ddd;
+		border-radius: 8px;
+		text-decoration: none;
+		color: #333;
+	}
 
-.page-item a {
-  padding: 8px 12px;
-  border: 1px solid #ddd;
-  text-decoration: none;
-  color: #333;
-}
-
-.page-item.active a {
-  background: #007bff;
-  color: white;
+	.active>a {
+		background: #007bff;
+		color: #fafafa;
+	}
 }
 
 .dots {
-  padding: 8px 12px;
+	padding: 8px 12px;
 }
