--- a/048.Highlighted Text Button Style/style.css
+++ b/048.Highlighted Text Button Style/style.css
@@ -26,7 +26,8 @@ a {
   text-decoration: none;
   position: relative;
   color: #74d4ff;
-  padding: 5px;
+  padding: 2px 3px;
+  border: 1px dashed color-mix(in hsl, currentColor 35%, transparent);
 }
 
 svg {
@@ -35,20 +36,20 @@ svg {
 }
 
 #tr_corner{
-  top: -2px;
-  right: -2px;
+  top: -3px;
+  right: -3px;
 }
-#tr_corner {
-  top: -2px;
-  left: -2px;
+#tl_corner {
+  top: -3px;
+  left: -3px;
 }
 
 #br_corner {
-  bottom: -2px;
-  right: -2px;
+  bottom: -3px;
+  right: -3px;
 }
 
 #bl_corner {
-  bottom: -2px;
-  left: -2px;
+  bottom: -3px;
+  left: -3px;
 }
