--- a/033.Text Overlay Video/style.css
+++ b/033.Text Overlay Video/style.css
@@ -7,14 +7,13 @@
 body {
 	font-family: 'Inter', sans-serif;
 	height: 100vh;
-  background: #8C8C8C;
+  background-color: #8C8C8C;
 	overflow: hidden;
   position: relative;
 	video {
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
-
 	}
 }
 
