feat: add HTML and CSS files for Simple del and ins Tag example

--- a/054.Simple 2.5D Button/style.css
+++ b/054.Simple 2.5D Button/style.css
@@ -21,6 +21,7 @@ main {
   align-items: center;
   caret-color: transparent;
   font-size: 62.5%;
+  font-family: "Inter", sans-serif;
 }
 
 button {
