--- a/060.Hover Button Animation By Transform /style.css
+++ b/060.Hover Button Animation By Transform /style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -14,17 +13,22 @@ body {
 }
 
 .styled__button {
-  --transition-animate: all .7s cubic-bezier(0.23, 1, 0.32, 1);
-  position: relative;
+  --transition-animate: all 0.7s cubic-bezier(0.23, 1, 0.32, 1);
+
   display: flex;
   align-items: center;
   gap: 4px;
+  position: relative;
   padding: 16px 36px;
   border: 2px solid currentColor;
+
   font-size: 16px;
   background-color: inherit;
 
+  box-shadow: 0 0 0 1px currentColor;
+
   border-radius: 20px;
+
   font-weight: 600;
   color: #fafbfb;
 
