feat: update Customize Radio component to use correct input type and improve styling

--- a/062.Customize Radio/style.css
+++ b/062.Customize Radio/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background: #f1f1dc;
+  background: #cdcdd8;
   height: 100dvh;
   display: grid;
   place-content: center;
@@ -25,7 +25,7 @@ h1 {
 }
 
 form {
-  --form-color: #e2a02d;
+  --form-color: #4a4a4a;
   --form-disabled: #999;
   outline: transparent;
 }
@@ -34,12 +34,11 @@ form {
   font-size: 2rem;
   font-weight: bold;
   line-height: 1.1;
+
   display: grid;
   grid-template-columns: 1em auto;
   gap: 0.5em;
-}
 
-.form__control + .form__control {
   margin-top: 1em;
 }
 
@@ -48,37 +47,26 @@ form {
   cursor: not-allowed;
 }
 
-input[type='ratio'] {
-  appearance: none;
-  background-color: var(--form-background);
+input[type='radio'] {
   margin: 0;
   font: inherit;
   color: currentColor;
-  width: 1.15em;
-  height: 1.15em;
+  width: 1em;
+  height: 1em;
   border: 0.15em solid currentColor;
-  border-radius: 0.15em;
-  transform: translateY(-0.075em);
 
   display: grid;
   place-content: center;
 
-  &:before {
-    content: '';
-    width: 0.5em;
-    height: 0.5em;
-    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-    transform: scale(0) rotate(45deg);
-    transform-origin: bottom left;
-    transition: .12s transform ease-in;
-    box-shadow: inset 1em 1em var(--form-color);
-  }
-  &:checked::before {
-    transform: scale(1);
-  }
-  :disabled {
+  &:disabled {
     --form-color: var(--form-disabled);
     color: var(--form-disabled);
     cursor: not-allowed;
   }
+  &:checked  {
+    background-color: var(--form-color);
+    accent-color: var(--form-color);
+   border-color: solid 1px var(--form-color);
+  }
 }
+
