--- a/066.Simple Card With Transition/style.css
+++ b/066.Simple Card With Transition/style.css
@@ -43,6 +43,11 @@ body {
     font-size: 1.5rem;
     font-weight: 500;
   }
+  p {
+    font-size: 0.8rem;
+    font-weight: 400;
+    text-align: center;
+  }
 }
 
 .card__container--content {
