--- a/067.Button Keyboard Style/style.css
+++ b/067.Button Keyboard Style/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -16,12 +15,52 @@ body {
   height: 100dvh;
 
   position: relative;
-  background: #171117;
+  background-color: #c9c093;
 
   display: grid;
   place-content: center;
 
   font-family: 'Inter', sans-serif;
-  color: #fbfbfa;
+  color: #171711;
+}
+
+.keyboard__button {
+  --btn: #fafafb;
+  --btn-radius: 15px;
+  --btn_outline: #171711;
+
+  font-size: 1rem;
+  font-weight: bold;
+
+  border: none;
+
+  cursor: pointer;
+  border-radius: var(--btn-radius);
+  background: var(--btn_outline);
+
+  &:hover {
+    .keyboard__button--text {
+      transform: translateY(-0.33em);
+    }
+  }
+
+  &:active {
+    .keyboard__button--text {
+      transform: translateY(0);
+    }
+  }
+}
+
+.keyboard__button--text {
+  display: block;
+
+  border: 2px solid var(--btn_outline);
+  border-radius: var(--btn-radius);
+  padding: 0.75em 1.5em;
+
+  background-color: var(--btn);
+  color: var(--btn_outline);
+  transform: translateY(-0.2em);
+  transition: transform 0.1s ease-in-out;
 }
 
