--- a/068.Directionally Aware Button/style.css
+++ b/068.Directionally Aware Button/style.css
@@ -22,5 +22,48 @@ body {
   place-content: center;
 
   font-family: 'Inter', sans-serif;
+
+}
+
+
+.ripped {
+  position: relative;
+  display: inline-block;
   color: #fbfbfa;
+  font-size: 20px;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  padding: 20px 50px;
+
+  margin: 10px;
+
+  letter-spacing: 2px;
+  border-radius: 40px;
+  overflow: hidden;
+  font-weight: 600;
+}
+
+span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: currentColor;
+  pointer-events: none;
+  border-radius: 50%;
+  animation: ripple 1s linear infinite;
+}
+
+@keyframes ripple {
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 0.2;
+  }
+
+  100% {
+    width: 500px;
+    height: 500px;
+    opacity: 0;
+  }
 }
