--- a/077.Simple Css Long Paragraph Column/style.css
+++ b/077.Simple Css Long Paragraph Column/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -23,4 +22,36 @@ body {
 
   font-family: 'Inter', sans-serif;
   color: #fbfbfa;
+}
+
+.content {
+  width: 800px;
+  font-size: 16px;
+  line-height: 1.5em;
+  text-align: justify;
+  margin-block: 1rem;
+  padding: 1rem;
+
+  column-count: 3;
+  column-gap: 2em;
+
+  h1 {
+    color: #4f5fb3;
+    font-weight: 600;
+    column-span: all;
+    font-size: 2em;
+    margin-bottom: 0.5em;
+    line-height: 1.2;
+  }
+
+  p {
+    text-align: justify;
+  }
+  p:first-of-type::before {
+    content: '“ ';
+    font-size: 1.2em;
+    color: #4f5fb3;
+    font-weight: bold;
+    line-height: 1;
+  }
 }
