--- a/081.Tabs Header  With Badge/style.css
+++ b/081.Tabs Header  With Badge/style.css
@@ -1,26 +1,108 @@
+ * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+ }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+ body {
+   width: 100vw;
+   height: 100dvh;
+   position: relative;
+   background-color: #171117;
+   display: grid;
+   place-content: center;
+   font-family: 'Inter', sans-serif;
+   color: #fbfbfa;
+ }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
+ .tabs-selector__container {
+   display: flex;
+   position: relative;
+   background-color: #fff;
+   box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.15),
+     0 6px 12px 0 rgba(24, 94, 224, 0.15);
+   padding: 0.25rem;
+   border-radius: 12px;
+   isolation: isolate;
+ }
 
-body {
-  width: 100vw;
-  height: 100dvh;
+ .tabs-selector__input {
+   position: absolute;
+   opacity: 0;
+   width: 0;
+   height: 0;
+ }
 
-  position: relative;
-  background-color: #171117;
+ .tabs-selector__label {
+   display: flex;
+   align-items: center;
+   justify-content: center;
 
-  display: grid;
-  place-content: center;
+   height: 30px;
+   width: 70px;
 
-  font-family: 'Inter', sans-serif;
-  color: #fbfbfa;
-}
+   font-size: 0.8rem;
+   color: black;
+   font-weight: 500;
+   text-transform: capitalize;
+   border-radius: 80px;
+
+   cursor: pointer;
+   position: relative;
+
+   transition: color 0.15s ease-in;
+
+ }
+
+ .tabs-selector__notification {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   position: absolute;
+   top: -0.3rem;
+   right: -1rem;
+   width: 4rem;
+   height: 0.8rem;
+   font-size: 10px;
+   border-radius: 8px;
+   background-color: #e6eef9;
+   transition: background-color 0.15s ease-in, color 0.15s ease-in;
+ }
+
+ .tabs-selector__input:checked+.tabs-selector__label {
+   color: #185ee0;
+ }
+
+ .tabs-selector__input:checked+.tabs-selector__label .tabs-selector__notification {
+   background-color: #185ee0;
+   color: #fff;
+ }
+
+ .tabs-selector__slider {
+   position: absolute;
+   height: 30px;
+   width: 70px;
+   background-color: #e6eef9;
+   border-radius: 8px;
+   transition: transform 0.15s ease-out;
+   z-index: -1;
+ }
+
+ #tab-weekly:checked~.tabs-selector__slider {
+   transform: translateX(0);
+ }
+
+ #tab-monthly:checked~.tabs-selector__slider {
+   transform: translateX(70px);
+ }
+
+ #tab-yearly:checked~.tabs-selector__slider {
+   transform: translateX(140px);
+ }
+
+ @media (max-width: 700px) {
+   .tabs-selector__container {
+     transform: scale(0.6);
+     transform-origin: left center;
+   }
+ }
