--- a/081.Tabs Header With Badge/style.css
+++ b/081.Tabs Header With Badge/style.css
@@ -16,14 +16,17 @@
  }
 
  .tabs-selector__container {
-   display: flex;
    position: relative;
+   display: flex;
+  justify-content: space-between;
    background-color: #fff;
    box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.15),
      0 6px 12px 0 rgba(24, 94, 224, 0.15);
    padding: 0.25rem;
    border-radius: 12px;
    isolation: isolate;
+
+   width: 300px;
  }
 
  .tabs-selector__input {
@@ -82,7 +85,7 @@
    position: absolute;
    height: 30px;
    width: 70px;
-   background-color: #e6eef9;
+   background-color: hsl(215, 61%, 94%);
    border-radius: 8px;
    transition: transform 0.15s ease-out;
    z-index: -1;
