--- a/083.Sticky Sidebar Section/style.css
+++ b/083.Sticky Sidebar Section/style.css
@@ -46,11 +46,24 @@ main {
 aside {
   position: sticky;
 
-  top: 2rem;
+  top: 5rem;
   padding-inline: 0.5em;
+
+  text-align: center;
+
+  p {
+    font-size: 0.8em;
+  }
+
+  img {
+    margin-top: 1rem;
+    object-fit: cover;
+    height: 150px;
+    border-radius: 8px;
+  }
 }
 
 header,
 footer {
-  height: 80px;
+  height: 50px;
 }
