--- a/085.Nested Dropdown Menu/style.css
+++ b/085.Nested Dropdown Menu/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -16,11 +15,222 @@ body {
   height: 100dvh;
 
   position: relative;
-  background-color: #171117;
+  background-color: #ccccd5;
 
   display: grid;
   place-content: center;
 
   font-family: 'Inter', sans-serif;
-  color: #fbfbfa;
+  color: #171717;
+}
+
+.dropdown {
+  position: relative;
+  max-width: 100%;
+  text-align: center;
+  z-index: 10;
+
+  caret-color: transparent;
+}
+
+.dropdown__toggle {
+  position: absolute;
+  left: -10;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.dropdown__btn {
+  position: relative;
+  font-weight: 800;
+  font-size: 15px;
+  line-height: 2;
+  height: 50px;
+  transition: all 200ms linear;
+  border-radius: 5px;
+  width: 180px;
+  letter-spacing: 1px;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  border: none;
+  background-image: linear-gradient(
+    139deg,
+    rgba(36, 40, 50, 1) 0%,
+    rgba(36, 40, 50, 1) 0%,
+    rgba(37, 28, 40, 1) 100%
+  );
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+}
+
+.dropdown__btn-icon,
+.dropdown__sub-btn-icon {
+  font-size: 24px;
+  margin-left: 10px;
+  color: hsl(0, 0%, 550%);
+
+  user-select: none;
+  transition: transform 200ms linear;
+}
+
+.dropdown__toggle:checked + .dropdown__btn .dropdown__btn-icon {
+  transform: rotate(180deg);
+}
+
+.dropdown__menu {
+  position: absolute;
+  padding: 5px;
+  background-color: #171117;
+  top: 60px;
+  left: 0px;
+  width: 100%;
+  border-radius: 4px;
+
+  display: block;
+  z-index: 2;
+  opacity: 0;
+
+  border-radius: 5px;
+  pointer-events: none;
+  transform: translateY(20px);
+  transition: all 200ms ease;
+}
+
+.dropdown__toggle:checked ~ .dropdown__menu {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(0);
+}
+
+.dropdown__menu::before {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  content: '';
+  display: block;
+  z-index: 1;
+}
+
+.dropdown__menu::after {
+    content: '';
+  position: absolute;
+  top: -7px;
+  left: 30px;
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid #111;
+
+  display: block;
+  z-index: 2;
+  transition: all 200ms linear;
+}
+
+.dropdown__item,
+.dropdown__submenu-item {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  color: hsl(0, 0%, 50%);
+  font-weight: 500;
+  font-size: 15px;
+  text-align: left;
+  text-decoration: none;
+
+  border-radius: 5px;
+
+  padding: 5px 20px 15px;
+
+  transition: all 200ms linear;
+}
+
+.dropdown__item:hover {
+  color: hsl(240, 11%, 98%);
+  background-color: hsl(226, 75%, 25%);
+}
+
+.dropdown__item-icon {
+  font-size: 22px;
+}
+
+.dropdown__sub-toggle {
+  position: absolute;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.dropdown__sub-btn {
+  position: relative;
+  color: hsl(0, 0%, 50%);
+  transition: all 200ms linear;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  border-radius: 5px;
+  padding: 5px 0;
+  padding-left: 20px;
+  padding-right: 15px;
+  text-align: left;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  width: 100%;
+  background: transparent;
+  border: none;
+}
+
+.dropdown__sub-btn:hover,
+.dropdown__submenu-item:hover {
+  color: hsl(0, 0%, 100%);
+  background-color: #c1a035;
+}
+
+.dropdown__sub-btn-icon {
+  color: hsl(0, 0%, 50%);
+  font-size: 22px;
+  transition: transform 200ms linear;
+
+  &:hover {
+    color: hsl(0, 0%, 50%);
+  }
+}
+
+.dropdown__sub-toggle:checked + .dropdown__sub-btn .dropdown__sub-btn-icon {
+  transform: rotate(135deg);
+}
+
+.dropdown__submenu {
+  position: relative;
+  display: block;
+  width: 100%;
+  pointer-events: none;
+  opacity: 0;
+  max-height: 0;
+  padding-left: 10px;
+  padding-right: 3px;
+  overflow: hidden;
+  transition: all 200ms linear;
+}
+
+.dropdown__sub-toggle:checked ~ .dropdown__submenu {
+  pointer-events: auto;
+  opacity: 1;
+  max-height: fit-content;
+}
+
+.dropdown__submenu-icon {
+  font-size: 20px;
 }
