fix(#87): correct content formatting for section chapter counters

--- a/087.Numbering With CSS Counters/style.css
+++ b/087.Numbering With CSS Counters/style.css
@@ -48,11 +48,10 @@ main {
   }
 
   section span::before {
-    content: counters(section-chapter, '.', decimal) var(--text, ' ');
+    content: counters(section-chapter, '.', decimal) '. ';
   }
 
   h2 {
-    --text: '. ';
     font-weight: bold;
   }
 
